fixed spacing and brackets in style.scss

--- a/style.scss
+++ b/style.scss
@@ -271,13 +271,6 @@ nav {
   }
 }
 
-.wrapper-footer {
-  margin-top: 50px;
-  border-top: 1px solid #ddd;
-  border-bottom: 1px solid #ddd;
-  background-color: $lightGray;
-}
-
 // for gallery.html layout (portfolio home)
 .c-hero-flex {
   display: flex;
@@ -292,7 +285,7 @@ nav {
       width: 100%;
     }
   }
-  
+      
   &__item {
     flex-grow: 1;
     background: #ccc;
@@ -308,32 +301,39 @@ nav {
     {
       height: 100%;
     }
-    
+        
     &:hover {
       flex-grow: 2;
       box-shadow: inset 0 0 0 100vmax rgba(175,0,100,.7);
     }
-    
+        
     &:nth-child(1) {
       background: #222 url(https://images.unsplash.com/photo-1417577097439-425fb7dec05e?dpr=1&auto=format&crop=entropy&fit=crop&w=1000&h=1000&q=80&cs=tinysrgb) no-repeat center center;
     }
-    
+        
     &:nth-child(2) {
       background: #222 url(https://images.unsplash.com/photo-1424460421773-58b49adfc68a?dpr=1&auto=format&crop=entropy&fit=crop&w=1000&h=1000&q=80&cs=tinysrgb) no-repeat center center;
     }
-    
+        
     &:nth-child(3) {
       background: #222 url(https://images.unsplash.com/photo-1442876906995-6761040d1f0b?dpr=1&auto=format&crop=entropy&fit=crop&w=1000&h=1000&q=80&cs=tinysrgb) no-repeat center center;
     }
   }
-  
+      
   &__title {
     text-transform: uppercase;
     letter-spacing: .075em;
     color: #fff;
     transition: .2s all;
   }
+}
 
+.wrapper-footer {
+  margin-top: 50px;
+  border-top: 1px solid #ddd;
+  border-bottom: 1px solid #ddd;
+  background-color: $lightGray;
+}
 
 footer {
   padding: 20px 0;
